# happy-league

./: .gitattributes  .gitignore  .project  .pydevproject  LICENSE  README.md  happy_league.spec  happy_league_macos.spec  makeSchedule.py  model.py  pyproject.toml  requirements.txt  table.py  util.py  xlsConfig.py
annealOpt/: anneal.py  schAnneal.py
cherryPyServer/: htmlView.py  scheduleAnalysis.py  server.py
example/: xlsConfig.xls
example_configs/: AG-2011-S1.xls  AG-2011-S2.xls  AG-dimanche-2012.xls
src/: main.py  table.pyo  web_server.py  widget.py
src/annealOpt/: __init__.pyo  anneal.pyo  schAnneal.py  schAnneal.pyo
src/cherryPyServer/: htmlView.py  htmlView.pyo  scheduleAnalysis.pyo  serverMod.py
src/happy_league/: __main__.py  makeSchedule.py  model.py  table.py  util.py  xlsConfig.py
src/happy_league.dist-info/: METADATA  top_level.txt
src/happy_league/annealOpt/: anneal.py  schAnneal.py
src/happy_league/cherryPyServer/: htmlView.py  server.py
src/happy_league/make_schedule/: makeSchedule.py
src/happy_league/make_schedule/annealOpt/: anneal.py  schAnneal.py
src/happy_league/server/: htmlView.py  scheduleAnalysis.py  server.py
src/happy_league/shared/: model.py  xlsConfig.py
src/qt/: main.py
src/web/: config.html  config_fields.html  index.html  select_schedule.html  template.html
src/web/js/: functions.js
