[tool.poetry]
name = "happy-league"
version = "0.1.0"
description = "Ultimate Frisbee schedule generator."
authors = ["Alexandre Lacoste, Jean-Francis Roy <jeanfrancisroy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
cherrypy = "18.10.0"
numpy = "2.3.2"
xlrd = "2.0.2"
pywebview = {version = "6.0", extras = ["qt"]}

# To avoid getting python.net 2 which is incompatible with Python 3.10+
pythonnet = "3.0.5"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

